# Duckboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
src/database/: duckdb_manager.py  state_manager.py
src/gui/: dashboard_view.py  file_browser.py  main_window.py  query_editor.py  results_table.py  sql_highlighter.py
src/gui/dialogs/: add_source.py
